[package]
name = "async-niri-socket"
version = "0.0.1"
edition = "2024"
description = "Non-blocking communication over the niri socket."
repository = "https://github.com/ZXY595/async-niri-socket"
license = "GPL-3.0"
resolver = "3"

[dependencies]
async-net = { version = "2.0", optional = true }
futures-lite = "2.6"
niri-ipc = "25.11.0"
serde_json = "1.0"
tokio = { version = "1.49", features = ["io-util", "net"], optional = true }

[features]
default = ["async-net"]
async-net = ["dep:async-net"]
tokio = ["dep:tokio"]
